CRUD project and project-detail

--- a/index.html
+++ b/index.html
@@ -78,3 +78,30 @@
     <!-- <script src="./assets/vendor/preline/dist/preline.js"></script> -->
   </body>
 </html>
+<!-- <div class="featured max-w-wrapper mx-auto mb-28" id="projects">
+  <h1 class="mb-8 text-[200px] text-center">Featured</h1>
+  <div class="project-featured">
+    <div class="rounded-2xl p-10 bg-pink-50 flex gap-10 mb-10">
+      <div class="image">
+        <img src="https://source.unsplash.com/random" class="w-[465px] h-[353px] object-cover rounded-lg"/>
+      </div>
+      <div class="content">
+        <div>
+          <h2 class="text-3xl font-medium mb-5">useTypewriter Hook</h2>
+          <p class="leading-8 pb-2 max-w-[434px] break-words">A flexible hook for creating typewriter-like experience with React. Users can add functions for further applications.</p>
+          <p class="text-sm pb-2">2020 — Design & web development</p>
+        </div>
+        <div class="project-frameworks flex flex-col mt-4 mb-5">
+          <div class="inline-flex items-center"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true" class="text-projecs-arrow w-5 mr-3"><path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg><p class="text-[15px] leading-7">React.js</p></div>
+          <div class="inline-flex items-center"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true" class="text-projecs-arrow w-5 mr-3"><path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg><p class="text-[15px] leading-7">React.js</p></div>
+          <div class="inline-flex items-center"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true" class="text-projecs-arrow w-5 mr-3"><path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg><p class="text-[15px] leading-7">React.js</p></div>
+          <div class="inline-flex items-center"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true" class="text-projecs-arrow w-5 mr-3"><path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6"></path></svg><p class="text-[15px] leading-7">React.js</p></div>
+        </div>
+        <div class="btns flex gap-4">
+          <a href="" class="inline-block p-2 border-gray-500 border rounded-lg font-light">View source</a>
+          <a href="" class="inline-block p-2 border-gray-500 border rounded-lg font-light">Visit website</a>
+        </div>
+      </div>
+    </div>
+  </div>  
+</div> -->
